styles/rainbow-delimiters.less
@import 'syntax-variables';

@max: 60;

.rainbow {
  // Err... I don't know why we must do that... Anyway
  // https://discuss.atom.io/t/creating-a-independent-cursor/14711
  transform: translate(-100%, -100%);
  font-weight: 500;
}

.rainbow-error {
  color: @syntax-color-removed;
  text-decoration: underline;
}

.generate-rainbows(@n, @i: 1) when (@i =< @n) {
  .rainbow-@{i} {
    @spins: floor(360 / @max);
    @color: darken(spin(@syntax-color-keyword, @i * @max), floor(@i / @spins) * 40 / @spins);
    color: @color;
  }
  .generate-rainbows(@n, (@i + 1));
}

.generate-rainbows(@max);

